<resources>
    <string name="app_name">Audition</string>
    <string name="notice">お知らせ</string>
    <string name="starlight_quote_jp">お持ちなさい\nあなたの望んだその星を</string>
    <string name="starlight_quote_en">And it shall be bestowed upon you,\n    the Star which you have longed for —</string>
    <string name="tower_text">The Starlight Gatherer</string>
    <string name="enquiry_text_jp">お問い合わせはこちら</string>
    <string name="enquiry_text_en">Enquiry</string>
    <string name="day_counter_pt_1">日</string>
    <string name="day_counter_pt_2">目</string>
    <string name="guide_text">ご案内</string>
    <string name="honorific">さん</string>
    <string name="today">本日</string>
    <string name="rest">お休み</string>
    <string name="rest_detail">No participation today</string>
    <string name="type_here">Type Here</string>
    <string name="cancelled">Cancelled</string>
    <string name="loading">loading</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="change_color">Change Color</string>
    <string name="change_name">Change Name</string>
    <string name="you_are_currently">You are currently:</string>
    <string name="header_image">Header Image</string>
    <string name="third_day">3</string>
    <string name="flower_image">Flower Image</string>
    <string name="light_image">Light Image</string>
    <string name="giraffe_image">Giraffe Image</string>
    <string name="tower_image">Tower Image</string>
    <string name="kagura_hikari_name_jp">神楽ひかり</string>
    <string name="phone_button_image">Phone Button Image</string>
    <string name="channel_name">AuditionChannelID</string>
    <string name="channel_description">Audition Channel</string>
    <string name="alarm_notification_text">alarm notification text</string>
    <string name="alarm_notification_title">alarm notification title</string>
</resources>
