<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoticeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null"
        tools:layout_editor_absoluteX="-29dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/auditionImageView"
                android:layout_width="300dp"
                android:layout_height="106dp"
                android:layout_marginTop="38dp"
                android:contentDescription="@string/header_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/audition" />

            <TextView
                android:id="@+id/dayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:fontFamily="@font/audition"
                android:text="@string/third_day"

                android:textSize="74sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/auditionImageView" />

            <TextView
                android:id="@+id/nichiTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/japanese_text_alt"
                android:text="@string/day_counter_pt_1"
                android:textScaleX="1.4"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/dayTextView"
                app:layout_constraintTop_toTopOf="@+id/dayTextView" />

            <TextView
                android:id="@+id/meTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/japanese_text_alt"
                android:text="@string/day_counter_pt_2"
                android:textScaleX="1.4"
                android:textSize="26sp"
                app:layout_constraintStart_toEndOf="@+id/nichiTextView"
                app:layout_constraintTop_toTopOf="@+id/dayTextView" />

            <ImageView
                android:id="@+id/giraffeImageView"
                android:layout_width="195dp"
                android:layout_height="195dp"
                android:layout_marginTop="28dp"
                android:alpha="0"
                android:contentDescription="@string/giraffe_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dayTextView"
                app:srcCompat="@drawable/kirin" />

            <TextView
                android:id="@+id/quoteJapaneseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/japanese_text"
                android:lineSpacingExtra="5dp"
                android:text="@string/starlight_quote_jp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/giraffeImageView" />

            <ImageView
                android:id="@+id/flowerImageView"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/flower_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quoteJapaneseTextView"
                app:srcCompat="@drawable/flower" />

            <ImageView
                android:id="@+id/lightImageView"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="1dp"
                android:contentDescription="@string/light_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flowerImageView"
                app:srcCompat="@drawable/light" />

            <TextView
                android:id="@+id/quoteEnglishTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/english_text"
                android:lineSpacingExtra="13dp"
                android:text="@string/starlight_quote_en"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lightImageView" />

            <ImageView
                android:id="@+id/towerImageView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="70dp"
                android:contentDescription="@string/tower_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quoteEnglishTextView"
                app:srcCompat="@drawable/tower" />

            <TextView
                android:id="@+id/towerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/english_text"
                android:lineSpacingExtra="13dp"
                android:text="@string/tower_text"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/towerImageView" />

            <TextView
                android:id="@+id/noticeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/japanese_text_alt"
                android:text="@string/notice"
                android:textAlignment="center"
                android:textScaleX="1.4"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/towerTextView" />

            <View
                android:id="@+id/noticeUnderlineView"
                android:layout_width="110dp"
                android:layout_height="1dp"

                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noticeTextView" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/japanese_text_alt"
                android:text="@string/kagura_hikari_name_jp"
                android:textAlignment="center"
                android:textColor="#6292e9"
                android:textScaleX="1.4"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noticeUnderlineView" />

            <TextView
                android:id="@+id/honorificTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/japanese_text_alt"
                android:text="@string/honorific"
                android:textAlignment="center"
                android:textScaleX="1.4"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/nameTextView"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

            <TextView
                android:id="@+id/todayTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/japanese_text_alt"
                android:text="@string/today"
                android:textAlignment="center"
                android:textScaleX="1.4"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/honorificTextView" />

            <TextView
                android:id="@+id/activityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/japanese_text_alt"
                android:text="@string/rest"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textScaleX="1.4"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todayTextView" />

            <TextView
                android:id="@+id/detailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/english_text"
                android:text="@string/rest_detail"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activityTextView" />

            <View
                android:id="@+id/enquiryDividerView"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="80dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailTextView" />

            <ImageButton
                android:id="@+id/phoneImageButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginTop="65dp"
                android:background="@null"
                android:contentDescription="@string/phone_button_image"
                android:onClick="switchLayout"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enquiryDividerView"
                app:srcCompat="@drawable/red_phone_button" />

            <TextView
                android:id="@+id/enquiryJapaneseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/japanese_text"
                android:text="@string/enquiry_text_jp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneImageButton" />

            <TextView
                android:id="@+id/enquiryEnglishTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/english_text"
                android:lineSpacingExtra="13dp"
                android:text="@string/enquiry_text_en"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enquiryJapaneseTextView" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enquiryEnglishTextView" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>