<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoticeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null"
        tools:layout_editor_absoluteX="-29dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/auditionImageView"
                android:layout_width="300dp"
                android:layout_height="106dp"
                android:layout_marginTop="38dp"
                android:contentDescription="@string/header_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/audition" />

            <TextView
                android:id="@+id/guideTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:fontFamily="@font/japanese_text_alt"
                android:text="@string/guide_text"
                android:textScaleX="1.4"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/auditionImageView" />

            <ImageView
                android:id="@+id/giraffeImageView"
                android:layout_width="195dp"
                android:layout_height="195dp"
                android:layout_marginTop="76dp"
                android:alpha="0"
                android:contentDescription="@string/giraffe_image"
                android:onClick="switchLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideTextView"
                app:srcCompat="@drawable/kirin" />

            <TextView
                android:id="@+id/quoteJapaneseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/japanese_text"
                android:lineSpacingExtra="5dp"
                android:text="@string/starlight_quote_jp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/giraffeImageView" />

            <ImageView
                android:id="@+id/flowerImageView"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/flower_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quoteJapaneseTextView"
                app:srcCompat="@drawable/flower" />

            <ImageView
                android:id="@+id/lightImageView"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="1dp"
                android:contentDescription="@string/light_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flowerImageView"
                app:srcCompat="@drawable/light" />

            <TextView
                android:id="@+id/quoteEnglishTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/english_text"
                android:lineSpacingExtra="13dp"
                android:text="@string/starlight_quote_en"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lightImageView" />

            <View
                android:id="@+id/enquiryDividerView"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="80dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quoteEnglishTextView" />

            <ImageButton
                android:id="@+id/phoneImageButton"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginTop="65dp"
                android:background="@null"
                android:contentDescription="@string/phone_button_image"
                android:onClick="setAlarm"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enquiryDividerView"
                app:srcCompat="@drawable/red_phone_button" />

            <TextView
                android:id="@+id/enquiryJapaneseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/japanese_text"
                android:text="@string/enquiry_text_jp"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneImageButton" />

            <TextView
                android:id="@+id/enquiryEnglishTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/english_text"
                android:lineSpacingExtra="13dp"
                android:text="@string/enquiry_text_en"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enquiryJapaneseTextView" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enquiryEnglishTextView" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>